--- a/publication.html
+++ b/publication.html
@@ -61,6 +61,22 @@
 				<li><a href=”#”>連絡先</a></li>
 			</ul>
 		</nav>
+		<div class="h_nav_sp">
+			<div class="hamburger">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+			<nav class="globalMenuSp">
+				<ul>
+					<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
+					<li><a href=profile.html>プロフィール</a></li>
+					<li><a href=research.html>研究テーマ</a></li>
+					<li><a href=publication.html>業績</a></li>
+					<li><a href=”#”>連絡先</a></li>
+				</ul>
+			</nav>
+		</div>
 		<div class="h_img animation">
 			<img src="./images/publication_v01.png" alt="ヘッダー画像">
 			<div class="section_t page_title">
@@ -278,6 +294,11 @@
 					<a href="#"><i class="fa fa-twitter"></i></a>
 					<a href="#"><i class="fa fa-facebook"></i></a>
 					<a href="#"><i class="fa fa-github"></i></a>
+					<div class="contacts_sp">
+						<p><i class="fa fa-envelope"></i>toshitaka.hamamura@gmail.com</p>
+						<!-- <p><i class="fa fa-phone-square"></i>000-0000-0000</p> -->
+						<!-- <p><i class="fa fa-address-card"></i>東京都⽂京区××△△10-0-5</p> -->
+					</div>
 				</div>
 			</div>
 			<div class="copy">
