research explanations changed

--- a/research.html
+++ b/research.html
@@ -103,9 +103,7 @@
 								<p>2019.4<br>
 								<span>～現在</span></p>
 							</div>
-							<p>スマートフォン嗜癖やゲーム嗜癖を中⼼に⼼理的リスクや他疾患との関連を研究しています。説
-							明が⼊ります。説明が⼊ります説明が⼊ります説明が⼊ります説明が⼊ります説明が⼊ります説
-							明が⼊ります説明が⼊ります説明が⼊ります。</p>
+							<p>スマートフォン嗜癖やゲーム嗜癖を中⼼に⼼理的リスクや他疾患との関連を研究しています。</p>
 						</li>
 						<li>
 							<div class="h3_title">
@@ -113,9 +111,7 @@
 								<p>2020.5<br>
 								<span>～現在</span></p>
 							</div>
-							<p>アプリなどを⽤いた介⼊の効果を検証しています。説明が⼊ります。説明が⼊ります説明が⼊り
-							ます説明が⼊ります説明が⼊ります説明が⼊ります説明が⼊ります説明が⼊ります説明が⼊りま
-							す。</p>
+							<p>アプリなどを⽤いた介⼊の効果を検証しています。</p>
 						</li>
 					</ul>
 				</div>
@@ -135,9 +131,7 @@
 								<p>2018.4<br>
 								<span>～2019.3</span></p>
 							</div>
-							<p>コンピュータ介⼊の効果検証やアルコール期待について研究していました。説明が⼊ります。説
-							明が⼊ります説明が⼊ります説明が⼊ります説明が⼊ります説明が⼊ります説明が⼊ります説明
-							が⼊ります説明が⼊ります。</p>
+							<p>コンピュータ介⼊の効果検証やアルコール期待について研究していました。</p>
 						</li>
 						<li>
 							<div class="h3_title">
@@ -146,8 +140,7 @@
 								<span>～2018.7</span></p>
 							</div>
 							<p>ネガティブな気分になった時にそれをどれほど回復できると信じているかについて研究していま
-							した。説明が⼊ります。説明が⼊ります説明が⼊ります説明が⼊ります説明が⼊ります説明が⼊
-							ります説明が⼊ります説明が⼊ります説明が⼊ります。</p>
+							した。</p>
 						</li>
 					</ul>
 				</div>
