--- a/research.html
+++ b/research.html
@@ -127,7 +127,7 @@
 					<ul class="r_ul">
 						<li>
 							<div class="h3_title">
-								<h3>アルコール依存</h3>
+								<h3>問題飲酒とコンピュータ介入</h3>
 								<p>2018.4<br>
 								<span>～2019.3</span></p>
 							</div>
