--- a/research.html
+++ b/research.html
@@ -103,7 +103,7 @@
 								<p>2019.4<br>
 								<span>～現在</span></p>
 							</div>
-							<p>スマートフォン嗜癖やゲーム嗜癖を中⼼に⼼理的リスクや他疾患との関連を研究しています。</p>
+							<p>スマートフォンやゲーム嗜癖を中⼼に⼼理的リスクや他疾患との関連を研究しています。</p>
 						</li>
 						<li>
 							<div class="h3_title">
@@ -111,7 +111,7 @@
 								<p>2020.5<br>
 								<span>～現在</span></p>
 							</div>
-							<p>アプリなどを⽤いた介⼊の効果を検証しています。</p>
+							<p>アプリやウェブブラウザを⽤いた介⼊の効果を検証しています。</p>
 						</li>
 					</ul>
 				</div>
@@ -119,7 +119,7 @@
 			<section class="research_arc animation">
 				<div class="section_t">
 					<h2>
-						過去の研究課題
+						の研究課題
 						<span>previous theme</span>
 					</h2>
 				</div>
@@ -131,7 +131,7 @@
 								<p>2018.4<br>
 								<span>～2019.3</span></p>
 							</div>
-							<p>コンピュータ介⼊の効果検証やアルコール期待について研究していました。</p>
+							<p>フィードバックを用いたウェブ介⼊の効果検証やアルコール期待について研究していました。</p>
 						</li>
 						<li>
 							<div class="h3_title">
@@ -140,7 +140,7 @@
 								<span>～2018.7</span></p>
 							</div>
 							<p>ネガティブな気分になった時にそれをどれほど回復できると信じているかについて研究していま
-							した。</p>
+							した。カリフォルニア州立大学フラートン校のジャック・マーンズ教授の下，日本人とアメリカ人の抑うつと身体症状の比較をしました。</p>
 						</li>
 					</ul>
 				</div>
