--- a/research.html
+++ b/research.html
@@ -119,7 +119,7 @@
 			<section class="research_arc animation">
 				<div class="section_t">
 					<h2>
-						研究課題
+						これまでの研究課題
 						<span>previous theme</span>
 					</h2>
 				</div>
