--- a/research.html
+++ b/research.html
@@ -127,7 +127,7 @@
 					<ul class="r_ul">
 						<li>
 							<div class="h3_title">
-								<h3>問題飲酒とコンピュータ介入</h3>
+								<h3>問題飲酒とコンピュータ介入</h3>　<!--2021/2/6 編集しました。浜村 -->
 								<p>2018.4<br>
 								<span>～2019.3</span></p>
 							</div>
@@ -140,7 +140,7 @@
 								<span>～2018.7</span></p>
 							</div>
 							<p>ネガティブな気分になった時にそれをどれほど回復できると信じているかについて研究していま
-							した。カリフォルニア州立大学フラートン校のジャック・マーンズ教授の下，日本人とアメリカ人の抑うつと身体症状の比較をしました。</p>
+							した。カリフォルニア州立大学フラートン校のジャック・マーンズ教授の下，日本人とアメリカ人の抑うつと身体症状の比較をしました。</p> 　 -->
 						</li>
 					</ul>
 				</div>
