--- a/research.html
+++ b/research.html
@@ -131,7 +131,7 @@
 								<p>2018.4<br>
 								<span>～2019.3</span></p>
 							</div>
-							<p>フィードバックを用いたウェブ介⼊の効果検証やアルコール期待について研究していました。</p>
+							<p>フィードバックを用いたウェブ介⼊の効果検証やアルコール期待について研究していました。</p>　<!--2021/2/6 編集しました。浜村 -->
 						</li>
 						<li>
 							<div class="h3_title">
