--- a/research.html
+++ b/research.html
@@ -103,7 +103,7 @@
 								<p>2019.4<br>
 								<span>～現在</span></p>
 							</div>
-							<p>スマートフォンやゲーム嗜癖を中⼼に⼼理的リスクや他疾患との関連を研究しています。</p>
+							<p>スマートフォンやゲーム嗜癖を中⼼に，行動嗜癖の⼼理的リスクや他疾患との関連を研究しています。</p>　<!--2021/2/6 編集しました。浜村 -->
 						</li>
 						<li>
 							<div class="h3_title">
@@ -111,7 +111,7 @@
 								<p>2020.5<br>
 								<span>～現在</span></p>
 							</div>
-							<p>アプリやウェブブラウザを⽤いた介⼊の効果を検証しています。</p>
+							<p>スマホのアプリやウェブブラウザを⽤いた介⼊の効果を検証しています。</p>　<!--2021/2/6 編集しました。浜村 -->
 						</li>
 					</ul>
 				</div>
@@ -131,16 +131,15 @@
 								<p>2018.4<br>
 								<span>～2019.3</span></p>
 							</div>
-							<p>フィードバックを用いたウェブ介⼊の効果検証やアルコール期待について研究していました。</p>　<!--2021/2/6 編集しました。浜村 -->
+							<p>フィードバックを用いたウェブ介⼊の効果検証やアルコールの効果期待について研究していました。</p>　<!--2021/2/6 編集しました。浜村 -->
 						</li>
 						<li>
 							<div class="h3_title">
-								<h3>情動制御</h3>
+								<h3>情動制御期待</h3>
 								<p>2016.8<br>
 								<span>～2018.7</span></p>
 							</div>
-							<p>ネガティブな気分になった時にそれをどれほど回復できると信じているかについて研究していま
-							した。カリフォルニア州立大学フラートン校のジャック・マーンズ教授の下，日本人とアメリカ人の抑うつと身体症状の比較をしました。</p> 　 -->
+							<p>ネガティブな気分になった時にそれをどれほど回復できると信じているか（Negative Mood Regulation Expectancies; NMRE）について研究していました。カリフォルニア州立大学フラートン校のジャック・マーンズ教授の下，日本人とアメリカ人の抑うつと身体症状の比較をしました。</p> <!--2021/2/6 編集しました。浜村 -->
 						</li>
 					</ul>
 				</div>
