--- a/publication.html
+++ b/publication.html
@@ -111,7 +111,7 @@
 										<span>Hamamura, T.</span>, & Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. International Journal of Psychology, 54, 351-359. doi:10.1002/ijop.12467
 									</li>
 									<li class="p_titles_li">
-										<span>Hamamura, T.</span>, Hamamura, T., & Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. International Journal of Mental Health and Addiction, 18, 195-206. doi:10.1007/s11469-018-9991-8
+										<span>Hamamura, T.</span>, & Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. International Journal of Mental Health and Addiction, 18, 195-206. doi:10.1007/s11469-018-9991-8
 									</li>
 								</ol>
 							</div>
