--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<main>
 		<article>
 			<section class="section_t message">
-				<h2 class="animation">浜村俊傑のパーソナルサイトへようこそ。</h2>
+				<h2 class="animation">浜村俊傑のウェブサイトへようこそ。</h2>
 				<p class="animation">
 					公認⼼理師として臨床現場に携わりつつ，<br>
 					アディクションの研究を主に⾏っています。<br>
@@ -110,7 +110,7 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
-						<li><span>2021.02.05</span><a>パーソナルサイトを立ち上げました。</a></li>
+						<li><span>2021.02.05</span><a>ウェブサイトを立ち上げました。</a></li>
 						<li><span>2020.11.23</span><a>⽇本アルコール・アディクション医学会で発表しました。</a></li>
 					</ul>
 				</div>
@@ -127,7 +127,7 @@
 				</div>
 				<div class="h_n_area wrapper">
 					<ul class="h_n_ul">
-						<li><span>2021.02.05</span><a href="#">パーソナルサイトを立ち上げました。</a></li>
+						<li><span>2021.02.05</span><a href="#">ウェブサイトを立ち上げました。</a></li>
 						<li><span>2020.11.23</span><a href="#">⽇本アルコール・アディクション医学会で発表しました。</a></li>
 					</ul>
 					<div class="blur"></div>
