--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<ul class="h_ul">
 				<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
 				<li><a href=profile.html>プロフィール</a></li>
-				<li><a href=research.html>研究テーマ</a></li>
+				<li><a href=research.html>研究</a></li>
 				<li><a href=publication.html>業績</a></li>
 				<li><a href=”#”>連絡先</a></li>
 			</ul>
@@ -71,7 +71,7 @@
 				<ul>
 					<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
 					<li><a href=profile.html>プロフィール</a></li>
-					<li><a href=research.html>研究テーマ</a></li>
+					<li><a href=research.html>研究</a></li>
 					<li><a href=publication.html>業績</a></li>
 					<li><a href=”#”>連絡先</a></li>
 				</ul>
@@ -92,9 +92,8 @@
 				<h2 class="animation">浜村俊傑のウェブサイトへようこそ。</h2>
 				<p class="animation">
 					公認⼼理師として臨床現場に携わりつつ，<br>
-					アディクションの研究を主に⾏っています。<br>
+					アディクションの研究に取り組んでいます。<br>
 					研究活動を中⼼にサイトを更新していきますので、お役に⽴つ情報があれば幸いです。<br>
-					ゆっくりとご覧ください。<br>
 					<span>
 						=====<br>
 						※このページは個⼈のサイトですので，所属している機関の情報発信ではありません。
@@ -110,8 +109,8 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
+						<li><span>2021.12.17</span><a>⽇本アルコール・アディクション医学会で発表しました。</a></li>
 						<li><span>2021.02.05</span><a>ウェブサイトを立ち上げました。</a></li>
-						<li><span>2020.11.23</span><a>⽇本アルコール・アディクション医学会で発表しました。</a></li>
 					</ul>
 				</div>
 				<div class="btn animation">
