--- a/research.html
+++ b/research.html
@@ -56,8 +56,8 @@
 			<ul class="h_ul">
 				<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
 				<li><a href=profile.html>プロフィール</a></li>
-				<li><a href=research.html>研究テーマ</a></li>
-				<li><a href=publication.html>業績</a></li>
+				<li><a href=research.html>研究内容</a></li>
+				<li><a href=publication.html>業績など</a></li>
 				<li><a href=”#”>連絡先</a></li>
 			</ul>
 		</nav>
@@ -71,8 +71,8 @@
 				<ul>
 					<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
 					<li><a href=profile.html>プロフィール</a></li>
-					<li><a href=research.html>研究テーマ</a></li>
-					<li><a href=publication.html>業績</a></li>
+					<li><a href=research.html>研究内容</a></li>
+					<li><a href=publication.html>業績など</a></li>
 					<li><a href=”#”>連絡先</a></li>
 				</ul>
 			</nav>
@@ -99,19 +99,45 @@
 					<ul class="r_ul">
 						<li>
 							<div class="h3_title">
-								<h3>⾏動嗜癖</h3>
-								<p>2019.4<br>
+								<h3>児童青年のインターネットゲーム障害の病態及び心理社会的リスク要因の解明</h3>
+								<p>2021.4<br>
 								<span>～現在</span></p>
 							</div>
-							<p>スマートフォンやゲーム嗜癖を中⼼に，行動嗜癖の⼼理的リスクや他疾患との関連を研究しています。</p>　<!--2021/2/6 編集しました。浜村 -->
+							<p>日本学術振興会 科学研究費助成事業（基盤Ｃ；研究分担者）</p>
 						</li>
 						<li>
 							<div class="h3_title">
-								<h3>コンピュータ介⼊</h3>
-								<p>2020.5<br>
+								<h3>Understanding and Reducing Emotional Difficulties in Gaming Disorder</h3>
+								<p>2020.4<br>
 								<span>～現在</span></p>
 							</div>
-							<p>スマホのアプリやウェブブラウザを⽤いた介⼊の効果を検証しています。</p>　<!--2021/2/6 編集しました。浜村 -->
+							<p>日本学術振興会 科学研究費助成事業（若手研究；研究代表者）</p>
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3>⾏思春期における行動依存への支援と関連障害の解明</h3>
+								<p>2020.4<br>
+								<span>～現在</span></p>
+							</div>
+							<p>日本学術振興会 科学研究費助成事業（特別研究員奨励費；研究代表者）</p>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="research_now animation">
+				<div class="section_t top_t">
+					<h2>
+						倫理審査委員会の承認を得た研究課題
+						<span>current theme</span>
+					</h2>
+				</div>
+				<div class="r_area">
+					<ul class="r_ul">
+						<li>
+							<div class="h3_title">
+								<h3>青年期におけるゲーム嗜癖と内在化問題の関連に着目した縦断的観察研究</h3>
+							</div>
+  							<p>承認番号：A2021-065，<a href=https://toshitaka-hamamura.github.io/speg2/public_notice_ver2.0.pdf>広告文書</a></p>
 						</li>
 					</ul>
 				</div>
@@ -127,19 +153,19 @@
 					<ul class="r_ul">
 						<li>
 							<div class="h3_title">
-								<h3>問題飲酒とコンピュータ介入</h3>　<!--2021/2/6 編集しました。浜村 -->
-								<p>2018.4<br>
+								<h3>ネガティブな気分回復における期待感の役割：文化的および発達的検討</h3>
+								<p>2017.4<br>
 								<span>～2019.3</span></p>
 							</div>
-							<p>フィードバックを用いたウェブ介⼊の効果検証やアルコールの効果期待について研究していました。</p>　<!--2021/2/6 編集しました。浜村 -->
+							<p>日本学術振興会 科学研究費助成事業（特別研究員奨励費）</p> 
 						</li>
 						<li>
 							<div class="h3_title">
-								<h3>情動制御期待</h3>
-								<p>2016.8<br>
-								<span>～2018.7</span></p>
+								<h3>問題飲酒とコンピュータ介入</h3>　
+								<p>2016.4<br>
+								<span>～2019.3</span></p>
 							</div>
-							<p>ネガティブな気分になった時にそれをどれほど回復できると信じているか（Negative Mood Regulation Expectancies; NMRE）について研究していました。カリフォルニア州立大学フラートン校のジャック・マーンズ教授の下，日本人とアメリカ人の抑うつと身体症状の比較をしました。</p> <!--2021/2/6 編集しました。浜村 -->
+							<p>東京大学ソーシャルICTグローバル・クリエィティブリーダー育成プログラム</p>
 						</li>
 					</ul>
 				</div>
