--- a/publication.html
+++ b/publication.html
@@ -56,8 +56,8 @@
 			<ul class="h_ul">
 				<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
 				<li><a href=profile.html>プロフィール</a></li>
-				<li><a href=research.html>研究テーマ</a></li>
-				<li><a href=publication.html>業績</a></li>
+				<li><a href=research.html>研究内容</a></li>
+				<li><a href=publication.html>業績など</a></li>
 				<li><a href=”#”>連絡先</a></li>
 			</ul>
 		</nav>
@@ -71,8 +71,8 @@
 				<ul>
 					<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
 					<li><a href=profile.html>プロフィール</a></li>
-					<li><a href=research.html>研究テーマ</a></li>
-					<li><a href=publication.html>業績</a></li>
+					<li><a href=research.html>研究内容</a></li>
+					<li><a href=publication.html>業績など</a></li>
 					<li><a href=”#”>連絡先</a></li>
 				</ul>
 			</nav>
