--- a/profile.html
+++ b/profile.html
@@ -97,7 +97,7 @@
 							</div>
 							<div class="pro_name">
 								<div class="h3_title">
-									<h3 class="modi_f_pro h3_top">浜村 俊傑<span class="modi_f_pro_p">Hamamura Toshitaka</span></h3>
+									<h3 class="modi_f_pro h3_top">浜村 俊傑<span class="modi_f_pro_p">Toshitaka Hamamura</span></h3>
 								</div>
 								<div class="p_titles">
 									<ol class="p_titles_ol">
@@ -120,6 +120,19 @@
 							</div>
 						</li>
 						<li>
+							<div class="h3_title">
+								<h3 class="modi_f_pu">Curriculum Vitae</h3>
+							</div>
+							<div class="p_titles">
+								<ol class="p_titles_ol">
+									<li class="pro_titles_li">
+										<a href=https://toshitaka-hamamura.github.io/cv_jp/cv_jp.pdf>日本語</a>
+									</li>
+									<li class="pro_titles_li">
+                    <a href=https://toshitaka-hamamura.github.io/cv_en/cv_en.pdf>English</a>
+									</li>
+								</ol>
+							</div>
 							<div class="h3_title">
 								<h3 class="modi_f_pu">職歴</h3>
 							</div>
@@ -202,9 +215,9 @@
 					<!-- <p><i class="fa fa-address-card"></i>東京都⽂京区××△△10-0-5</p> -->
 				</div>
 				<div class="sns">
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-github"></i></a>
+					<a href="https://twitter.com/hamamura_toshi"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.facebook.com/toshitaka.hamamura/"><i class="fa fa-facebook"></i></a>
+					<a href="https://github.com/toshitaka-hamamura"><i class="fa fa-github"></i></a>
 					<div class="contacts_sp">
 						<p><i class="fa fa-envelope"></i>toshitaka.hamamura@gmail.com</p>
 						<!-- <p><i class="fa fa-phone-square"></i>000-0000-0000</p> -->
