--- a/publication.html
+++ b/publication.html
@@ -291,9 +291,9 @@
 					<!-- <p><i class="fa fa-address-card"></i>東京都⽂京区××△△10-0-5</p> -->
 				</div>
 				<div class="sns">
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-github"></i></a>
+					<a href="https://twitter.com/hamamura_toshi"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.facebook.com/toshitaka.hamamura/"><i class="fa fa-facebook"></i></a>
+					<a href="https://github.com/toshitaka-hamamura"><i class="fa fa-github"></i></a>
 					<div class="contacts_sp">
 						<p><i class="fa fa-envelope"></i>toshitaka.hamamura@gmail.com</p>
 						<!-- <p><i class="fa fa-phone-square"></i>000-0000-0000</p> -->
