--- a/research.html
+++ b/research.html
@@ -81,7 +81,7 @@
 			<img src="./images/research_v01.png" alt="ヘッダー画像">
 			<div class="section_t page_title">
 				<h2>
-					研究テーマ
+					研究課題
 				</h2>
 			</div>
 		</div>
@@ -91,8 +91,8 @@
 			<section class="research_now animation">
 				<div class="section_t top_t">
 					<h2>
-						現在の研究課題
-						<span>current theme</span>
+						継続中の研究課題
+						<span>current projects</span>
 					</h2>
 				</div>
 				<div class="r_area">
@@ -127,8 +127,8 @@
 			<section class="research_now animation">
 				<div class="section_t top_t">
 					<h2>
-						倫理審査委員会の承認を得た研究課題
-						<span>current theme</span>
+						倫理審査委員会の承認を得た研究課題（公告用のみ）
+						<span>approved projects</span>
 					</h2>
 				</div>
 				<div class="r_area">
@@ -137,7 +137,7 @@
 							<div class="h3_title">
 								<h3>青年期におけるゲーム嗜癖と内在化問題の関連に着目した縦断的観察研究</h3>
 							</div>
-  							<p>承認番号：A2021-065，<a href=https://toshitaka-hamamura.github.io/speg2/public_notice_ver2.0.pdf>広告文書</a></p>
+  							<p>承認番号：A2021-065，<a href=https://toshitaka-hamamura.github.io/speg2/public_notice_ver2.0.pdf>公告文書</a></p>
 						</li>
 					</ul>
 				</div>
@@ -146,7 +146,7 @@
 				<div class="section_t">
 					<h2>
 						これまでの研究課題
-						<span>previous theme</span>
+						<span>previous projects</span>
 					</h2>
 				</div>
 				<div class="r_area">
@@ -181,9 +181,9 @@
 					<!-- <p><i class="fa fa-address-card"></i>東京都⽂京区××△△10-0-5</p> -->
 				</div>
 				<div class="sns">
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-github"></i></a>
+					<a href="https://twitter.com/hamamura_toshi"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.facebook.com/toshitaka.hamamura/"><i class="fa fa-facebook"></i></a>
+					<a href="https://github.com/toshitaka-hamamura"><i class="fa fa-github"></i></a>
 					<div class="contacts_sp">
 						<p><i class="fa fa-envelope"></i>toshitaka.hamamura@gmail.com</p>
 						<!-- <p><i class="fa fa-phone-square"></i>000-0000-0000</p> -->
