--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					研究活動を中⼼にサイトを更新していきますので、お役に⽴つ情報があれば幸いです。<br>
 					<span>
 						=====<br>
-						※このページは個⼈のサイトですので，所属している機関の情報発信ではありません。
+						※このサイトは，所属している機関の情報発信ではありません。
 					</span>
 				</p>
 			</section>
@@ -109,8 +109,10 @@
 				</div>
 				<div class="h_n_area">
 					<ul class="h_n_ul">
-						<li><span>2021.12.17</span><a>⽇本アルコール・アディクション医学会で発表しました。</a></li>
-						<li><span>2021.02.05</span><a>ウェブサイトを立ち上げました。</a></li>
+					  <li><span>2022.02.23</span><a href="https://doi.org/10.1111/jpr.12408">共著論文が</a>Japanese Psychological Researchに採択されました。</li>
+						<li><span>2021.12.17</span>⽇本アルコール・アディクション医学会で発表しました。</li>
+						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">筆頭論文</a>がAddictive Behaviors Reportsに採択されました。</li>
+						<li><span>2021.02.05</span>ウェブサイトを立ち上げました。</li>
 					</ul>
 				</div>
 				<div class="btn animation">
@@ -124,13 +126,11 @@
 						<span>schedule</span>
 					</h2>
 				</div>
-				<div class="h_n_area wrapper">
+				<div class="h_n_area">
 					<ul class="h_n_ul">
-						<li><span>2021.02.05</span><a href="#">ウェブサイトを立ち上げました。</a></li>
-						<li><span>2020.11.23</span><a href="#">⽇本アルコール・アディクション医学会で発表しました。</a></li>
+						<li><span></span><a href="#">公開できる予定はありません。</a></li>
 					</ul>
 					<div class="blur"></div>
-					<div class="text">Comming Soon</div>
 				</div>
 			</section>
 		</article>
@@ -144,9 +144,9 @@
 					<!-- <p><i class="fa fa-address-card"></i>東京都⽂京区××△△10-0-5</p> -->
 				</div>
 				<div class="sns">
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-github"></i></a>
+					<a href="https://twitter.com/hamamura_toshi"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.facebook.com/toshitaka.hamamura/"><i class="fa fa-facebook"></i></a>
+					<a href="https://github.com/toshitaka-hamamura"><i class="fa fa-github"></i></a>
 					<div class="contacts_sp">
 						<p><i class="fa fa-envelope"></i>toshitaka.hamamura@gmail.com</p>
 						<!-- <p><i class="fa fa-phone-square"></i>000-0000-0000</p> -->
