--- a/index_en.html
+++ b/index_en.html
@@ -46,7 +46,7 @@
 			</div>
 			<div class="lang">
 				<p>
-					<a href="index_en.html">English</a>
+					<a href="#">English</a>
 					<span>｜</span>
 					<a href="#">日本語</a>
 				</p>
