--- a/index_en.html
+++ b/index_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 
 <head>
 
@@ -46,19 +46,19 @@
 			</div>
 			<div class="lang">
 				<p>
-					<a href="#">English</a>
+					<a href="index_en.html">English</a>
 					<span>｜</span>
-					<a href="#">日本語</a>
+					<a href="index.html">日本語</a>
 				</p>
 			</div>
 		</div>
 		<nav class="h_nav">
 			<ul class="h_ul">
-				<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
-				<li><a href=profile.html>プロフィール</a></li>
-				<li><a href=research.html>研究内容</a></li>
-				<li><a href=publication.html>業績など</a></li>
-				<li><a href=”#”>連絡先</a></li>
+				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+				<li><a href=profile.html>PROFILE</a></li>
+				<li><a href=research.html>RESEARCH</a></li>
+				<li><a href=publication.html>LINKS</a></li>
+				<li><a href=”#”>CONACTS</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
@@ -69,11 +69,11 @@
 			</div>
 			<nav class="globalMenuSp">
 				<ul>
-					<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
-					<li><a href=profile.html>プロフィール</a></li>
-					<li><a href=research.html>研究内容</a></li>
-					<li><a href=publication.html>業績など</a></li>
-					<li><a href=”#”>連絡先</a></li>
+					<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
+					<li><a href=profile.html>PROFILE</a></li>
+					<li><a href=research.html>RESEARCH</a></li>
+					<li><a href=publication.html>LINKS</a></li>
+					<li><a href=”#”>CONACTS</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -89,21 +89,20 @@
 	<main>
 		<article>
 			<section class="section_t message">
-				<h2 class="animation">浜村俊傑のウェブサイトへようこそ。</h2>
+				<h2 class="animation">Welcome to my personal website.</h2>
 				<p class="animation">
-					公認⼼理師として臨床現場に携わりつつ，<br>
-					アディクションの研究に取り組んでいます。<br>
-					研究活動を中⼼にサイトを更新していきますので、お役に⽴つ情報があれば幸いです。<br>
+					I am a researcher in Clinical Psychology and licensed therapist.<br>
+					This website does not represent my affiliations in any way.<br>
 					<span>
 						=====<br>
-						このサイトは，所属している機関の情報発信ではありません。
+						
 					</span>
 				</p>
 			</section>
 			<section class="home_news animation">
 				<div class="section_t">
 					<h2>
-						最新情報
+						NEWS
 						<span>news</span>
 					</h2>
 				</div>
