--- a/index_jp.html
+++ b/index_jp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
 
@@ -46,9 +46,9 @@
 			</div>
 			<div class="lang">
 				<p>
-					<a href="index_en.html">English</a>
+					<a href="#">English</a>
 					<span>｜</span>
-					<a href="index.html">日本語</a>
+					<a href="#">日本語</a>
 				</p>
 			</div>
 		</div>
@@ -57,8 +57,8 @@
 				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
 				<li><a href=profile.html>PROFILE</a></li>
 				<li><a href=research.html>RESEARCH</a></li>
-				<li><a href=publication.html>LINKS</a></li>
-				<li><a href=”#”>CONACTS</a></li>
+				<li><a href=publication.html>PUBLICATION</a></li>
+				<li><a href=”#”>LINK</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
@@ -69,11 +69,11 @@
 			</div>
 			<nav class="globalMenuSp">
 				<ul>
-					<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
-					<li><a href=profile.html>PROFILE</a></li>
-					<li><a href=research.html>RESEARCH</a></li>
-					<li><a href=publication.html>LINKS</a></li>
-					<li><a href=”#”>CONACTS</a></li>
+					<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
+					<li><a href=profile.html>プロフィール</a></li>
+					<li><a href=research.html>研究内容</a></li>
+					<li><a href=publication.html>業績など</a></li>
+					<li><a href=”#”>連絡先</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -89,21 +89,21 @@
 	<main>
 		<article>
 			<section class="section_t message">
-				<h2 class="animation">Welcome to my personal website.</h2>
+				<h2 class="animation"> 浜村俊傑のウェブサイト</h2>
 				<p class="animation">
-					I am a researcher in Clinical Psychology and licensed therapist.<br>
-					This website does not represent my affiliations in any way.<br>
+					公認⼼理師として臨床現場に携わりつつ，<br>
+					アディクションの研究に取り組んでいます。<br>
+					研究活動を中⼼にサイトを更新していきますので、お役に⽴つ情報があれば幸いです。<br>
 					<span>
 						=====<br>
-						
+						このサイトは，所属している機関の情報発信ではありません。<br>
 					</span>
 				</p>
 			</section>
 			<section class="home_news animation">
 				<div class="section_t">
 					<h2>
-						NEWS
-						<span>news</span>
+						最新情報
 					</h2>
 				</div>
 				<div class="h_n_area">
@@ -111,26 +111,11 @@
 					  <li><span>2022.02.23</span><a href="https://doi.org/10.1111/jpr.12408">共著論文が</a>Japanese Psychological Researchに採択されました。</li>
 						<li><span>2021.12.17</span>⽇本アルコール・アディクション医学会で発表しました。</li>
 						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">筆頭論文</a>がAddictive Behaviors Reportsに採択されました。</li>
-						<li><span>2021.02.05</span>ウェブサイトを立ち上げました。</li>
 					</ul>
 				</div>
-				<div class="btn animation">
+				<!-- <div class="btn animation">
 					<a href="#" class="arrow2">More</a>
-				</div>
-			</section>
-			<section class="home_schedule animation">
-				<div class="section_t">
-					<h2>
-						今後の予定
-						<span>schedule</span>
-					</h2>
-				</div>
-				<div class="h_n_area">
-					<ul class="h_n_ul">
-						<li><span></span><a href="#">公開できる予定はありません。</a></li>
-					</ul>
-					<div class="blur"></div>
-				</div>
+				</div> -->
 			</section>
 		</article>
 	</main>
