--- a/index_jp.html
+++ b/index_jp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="jp">
 
 <head>
 
@@ -46,19 +46,19 @@
 			</div>
 			<div class="lang">
 				<p>
-					<a href="#">English</a>
+					<a href="profile.html">English</a>
 					<span>｜</span>
-					<a href="#">日本語</a>
+					<a href="profile_jp.html">日本語</a>
 				</p>
 			</div>
 		</div>
 		<nav class="h_nav">
 			<ul class="h_ul">
-				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
-				<li><a href=profile.html>PROFILE</a></li>
-				<li><a href=research.html>RESEARCH</a></li>
-				<li><a href=publication.html>PUBLICATION</a></li>
-				<li><a href=”#”>LINK</a></li>
+				<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
+				<li><a href=profile.html>プロフィール</a></li>
+				<li><a href=research.html>研究内容</a></li>
+				<li><a href=publication.html>業績など</a></li>
+				<li><a href=”#”>外部リンク</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
@@ -88,34 +88,117 @@
 	</header>
 	<main>
 		<article>
-			<section class="section_t message">
-				<h2 class="animation"> 浜村俊傑のウェブサイト</h2>
-				<p class="animation">
-					公認⼼理師として臨床現場に携わりつつ，<br>
-					アディクションの研究に取り組んでいます。<br>
-					研究活動を中⼼にサイトを更新していきますので、お役に⽴つ情報があれば幸いです。<br>
-					<span>
-						=====<br>
-						このサイトは，所属している機関の情報発信ではありません。<br>
-					</span>
-				</p>
-			</section>
-			<section class="home_news animation">
-				<div class="section_t">
-					<h2>
-						最新情報
-					</h2>
-				</div>
-				<div class="h_n_area">
-					<ul class="h_n_ul">
-					  <li><span>2022.02.23</span><a href="https://doi.org/10.1111/jpr.12408">共著論文が</a>Japanese Psychological Researchに採択されました。</li>
-						<li><span>2021.12.17</span>⽇本アルコール・アディクション医学会で発表しました。</li>
-						<li><span>2021.12.14</span><a href="https://doi.org/10.1016/j.abrep.2021.100400">筆頭論文</a>がAddictive Behaviors Reportsに採択されました。</li>
+			<section class="profile animation">
+				<div class="p_area">
+					<ul class="p_ul">
+						<li class="pro_li">
+							<div class="pro_img">
+								<img src="./images/profile_pic_v01.png" alt="プロフィール画像">
+							</div>
+							<div class="pro_name">
+								<div class="h3_title">
+									<h3 class="modi_f_pro h3_top">名前</span></h3>
+								</div>
+								<div class="p_titles">
+									<ol class="p_titles_ol">
+										<li class="pro_titles_li pro_name_li">
+											浜村　俊傑（はまむら　としたか）
+										</li>
+									</ol>
+								</div>
+								<div class="h3_title">
+									<h3 class="modi_f_pro h3_top">所属</span></h3>
+								</div>
+								<div class="p_titles">
+									<ol class="p_titles_ol">
+										<li class="pro_titles_li pro_name_li">
+											国⽴研究開発法⼈国⽴精神・神経医療研究センター<br>
+											認知⾏動療法センター
+										</li>
+										<li class="pro_titles_li pro_name_li">
+											⽇本学術振興会特別研究員（PD）
+										</li>
+										<li class="pro_titles_li pro_name_li">
+											株式会社KDDI 総合研究所 健康⾏動変容グループ<br>
+											招聘研究員
+										</li>
+									</ol>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3 class="modi_f_pro h3_top">資格</span></h3>
+							</div>
+							<div class="p_titles">
+								<ol class="p_titles_ol">
+									<li class="pro_titles_li pro_name_li">
+										⽇本臨床⼼理⼠資格認定協会 臨床⼼理⼠
+									</li>
+									<li class="pro_titles_li pro_name_li">
+										厚⽣労働省・⽂部科学省 公認⼼理師
+									</li>
+								</ol>
+							</div>
+							<div class="h3_title">
+								<h3 class="modi_f_pu">職歴</h3>
+							</div>
+							<div class="p_titles">
+								<ol class="p_titles_ol">
+									<li class="pro_titles_li">
+										2010年09⽉〜2012年06⽉ 発達障害団体（Developmental Disabilities Association）
+									</li>
+									<li class="pro_titles_li">
+										2017年04⽉〜2019年03⽉ ⽇本学術振興会特別研究員（DC2）（受⼊機関／東京⼤学）
+									</li>
+									<li class="pro_titles_li">
+										2019年04⽉〜2020年03⽉ 株式会社KDDI 総合研究所 研究員
+									</li>
+									<li class="pro_titles_li">
+										2020年04⽉〜現在 ⽇本学術振興会特別研究員（PD）（受⼊機関／国⽴精神・神経医療研究センター）
+									</li>
+									<li class="pro_titles_li">
+										2019年04⽉〜現在 株式会社KDDI 総合研究所 招聘研究員
+									</li>
+								</ol>
+							</div>
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3 class="modi_f_pu">学歴</h3>
+							</div>
+							<div class="p_titles">
+								<ol class="p_titles_ol">
+									<li class="pro_titles_li">
+										2003年09⽉〜2006年06⽉ デイビッド・トンプソン⾼等学校
+									</li>
+									<li class="pro_titles_li">
+										2006年09⽉〜2010年05⽉ トリニティ・ウエスタン⼤学⼈⽂社会科学部⼼理学専修
+									</li>
+									<li class="pro_titles_li">
+										2012年04⽉〜2015年08⽉ カリフォルニア州⽴⼤学フラートン校 ⼤学院⼈⽂社会科学研究科<br>⼼理学専攻 臨床⼼理学コース 修⼠課程
+									</li>
+									<li class="pro_titles_li">
+										2016年04⽉〜2019年03⽉ 東京⼤学 ⼤学院教育学研究科 総合教育科学専攻 ⼼⾝発達科学専修<br>臨床⼼理学コース 博⼠課程
+									</li>
+								</ol>
+							</div>
+							<div class="h3_title">
+								<h3 class="modi_f_pu">職務経歴書（Curriculum Vitae）</h3>
+							</div>
+							<div class="p_titles">
+								<ol class="p_titles_ol">
+									<li class="pro_titles_li">
+										<a href=https://toshitaka-hamamura.github.io/cv_jp/cv_jp.pdf>日本語</a>
+									</li>
+									<li class="pro_titles_li">
+                    <a href=https://toshitaka-hamamura.github.io/cv_en/cv_en.pdf>English</a>
+									</li>
+								</ol>
+							</div>
+						</li>
 					</ul>
 				</div>
-				<!-- <div class="btn animation">
-					<a href="#" class="arrow2">More</a>
-				</div> -->
 			</section>
 		</article>
 	</main>
