--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 			</div>
 			<div class="lang">
 				<p>
-					<a href="index_en.html">English</a>
+					<a href="profile.html">English</a>
 					<span>｜</span>
-					<a href="index.html">日本語</a>
+					<a href="profile_jp.html">日本語</a>
 				</p>
 			</div>
 		</div>
@@ -87,6 +87,129 @@
 		</div>
 	</header>
 	<main>
+		<article>
+			<section class="profile animation">
+				<div class="p_area">
+					<ul class="p_ul">
+						<li class="pro_li">
+							<div class="pro_img">
+								<img src="./images/profile_pic_v01.png" alt="プロフィール画像">
+							</div>
+							<div class="pro_name">
+								<div class="h3_title">
+									<h3 class="modi_f_pro h3_top">Toshitaka Hamamura<span class="modi_f_pro_p"></span></h3>
+								</div>
+								<div class="p_titles">
+									<ol class="p_titles_ol">
+										<li class="pro_titles_li pro_name_li">
+											National Center for Cognitive Bahvior Therapry and Research<br>
+											National Center of Neurology and Psychiatry
+										</li>
+										<li class="pro_titles_li pro_name_li">
+											⽇本学術振興会特別研究員（PD）
+										</li>
+										<li class="pro_titles_li pro_name_li">
+											株式会社KDDI 総合研究所 健康⾏動変容グループ<br>
+											招聘研究員
+										</li>
+										<li class="pro_titles_li pro_name_li">
+											⽇本臨床⼼理⼠資格認定協会 臨床⼼理⼠
+										</li>
+										<li class="pro_titles_li pro_name_li">
+											厚⽣労働省・⽂部科学省 公認⼼理師
+										</li>
+									</ol>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3 class="modi_f_pu">Curriculum Vitae</h3>
+							</div>
+							<div class="p_titles">
+								<ol class="p_titles_ol">
+									<li class="pro_titles_li">
+										<a href=https://toshitaka-hamamura.github.io/cv_jp/cv_jp.pdf>日本語</a>
+									</li>
+									<li class="pro_titles_li">
+                    <a href=https://toshitaka-hamamura.github.io/cv_en/cv_en.pdf>English</a>
+									</li>
+								</ol>
+							</div>
+							<div class="h3_title">
+								<h3 class="modi_f_pu">職歴</h3>
+							</div>
+							<div class="p_titles">
+								<ol class="p_titles_ol">
+									<li class="pro_titles_li">
+										2010年09⽉〜2012年06⽉ 発達障害団体（Developmental Disabilities Association）
+									</li>
+									<li class="pro_titles_li">
+										2017年04⽉〜2019年03⽉ ⽇本学術振興会特別研究員（DC2）（受⼊機関／東京⼤学）
+									</li>
+									<li class="pro_titles_li">
+										2019年04⽉〜2020年03⽉ 株式会社KDDI 総合研究所 研究員
+									</li>
+									<li class="pro_titles_li">
+										2020年04⽉〜現在 ⽇本学術振興会特別研究員（PD）（受⼊機関／国⽴精神・神経医療研究センター）
+									</li>
+									<li class="pro_titles_li">
+										2019年04⽉〜現在 株式会社KDDI 総合研究所 招聘研究員
+									</li>
+								</ol>
+							</div>
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3 class="modi_f_pu">学歴</h3>
+							</div>
+							<div class="p_titles">
+								<ol class="p_titles_ol">
+									<li class="pro_titles_li">
+										2003年09⽉〜2006年06⽉ デイビッド・トンプソン⾼等学校
+									</li>
+									<li class="pro_titles_li">
+										2006年09⽉〜2010年05⽉ トリニティ・ウエスタン⼤学⼈⽂社会科学部⼼理学専修
+									</li>
+									<li class="pro_titles_li">
+										2012年04⽉〜2015年08⽉ カリフォルニア州⽴⼤学フラートン校 ⼤学院⼈⽂社会科学研究科<br>⼼理学専攻 臨床⼼理学コース 修⼠課程
+									</li>
+									<li class="pro_titles_li">
+										2016年04⽉〜2019年03⽉ 東京⼤学 ⼤学院教育学研究科 総合教育科学専攻 ⼼⾝発達科学専修<br>臨床⼼理学コース 博⼠課程
+									</li>
+								</ol>
+							</div>
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3 class="modi_f_pu">査読歴など</h3>
+							</div>
+							<div class="p_titles">
+								<ol class="p_titles_ol">
+									<li class="pro_titles_li">
+										International Journal of Mental Health and Addiction
+									</li>
+								</ol>
+							</div>
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3 class="modi_f_pu">賞罰</h3>
+							</div>
+							<div class="p_titles">
+								<ol class="p_titles_ol">
+									<li class="pro_titles_li">
+										2017年9⽉ ⽇本アルコール関連問題学会第6 回⼩杉好弘記念賞
+									</li>
+								</ol>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
+		</article>
+	</main>
+  <main>
 		<article>
 			<section class="section_t message">
 				<h2 class="animation">Welcome to my personal website.</h2>
