--- a/index.html
+++ b/index.html
@@ -44,21 +44,22 @@
 			<div class="title">
 				<h1>Toshitaka Hamamura, Ph.D.</h1>
 			</div>
+<!-- 
 			<div class="lang">
 				<p>
 					<a href="profile.html">English</a>
 					<span>｜</span>
 					<a href="profile_jp.html">日本語</a>
 				</p>
+-->
 			</div>
 		</div>
 		<nav class="h_nav">
 			<ul class="h_ul">
-				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
-				<li><a href=profile.html>PROFILE</a></li>
-				<li><a href=research.html>RESEARCH</a></li>
-				<li><a href=publication.html>LINKS</a></li>
-				<li><a href=”#”>CONACTS</a></li>
+				<li><a href=index.html>&nbsp;PROFILE&nbsp;</a></li>
+				<li><a href=index_jp.html>プロフィール</a></li>
+				<li><a href=research.html>研究</a></li>
+				<li><a href=404.html>LINKS</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
@@ -69,11 +70,10 @@
 			</div>
 			<nav class="globalMenuSp">
 				<ul>
-					<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
-					<li><a href=profile.html>PROFILE</a></li>
-					<li><a href=research.html>RESEARCH</a></li>
-					<li><a href=publication.html>LINKS</a></li>
-					<li><a href=”#”>CONACTS</a></li>
+				<li><a href=index.html>&nbsp;PROFILE&nbsp;</a></li>
+				<li><a href=index_jp.html>プロフィール</a></li>
+				<li><a href=research.html>研究</a></li>
+				<li><a href=404.html>LINKS</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -97,26 +97,29 @@
 							</div>
 							<div class="pro_name">
 								<div class="h3_title">
-									<h3 class="modi_f_pro h3_top">Toshitaka Hamamura<span class="modi_f_pro_p"></span></h3>
+									<h3 class="modi_f_pro h3_top">NAME</span></h3>
 								</div>
 								<div class="p_titles">
 									<ol class="p_titles_ol">
 										<li class="pro_titles_li pro_name_li">
-											National Center for Cognitive Bahvior Therapry and Research<br>
+											Toshitaka Hammaura
+										</li>
+									</ol>
+								</div>
+								<div class="h3_title">
+									<h3 class="modi_f_pro h3_top">Current positions</span></h3>
+								</div>
+								<div class="p_titles">
+									<ol class="p_titles_ol">
+										<li class="pro_titles_li pro_name_li">
+											JSPS Research Fellow, National Center for Cognitive Behavior Therapy and Research<br>
 											National Center of Neurology and Psychiatry
 										</li>
 										<li class="pro_titles_li pro_name_li">
-											⽇本学術振興会特別研究員（PD）
+											Research Fellow (PD), Japan Society for the Promotion of Science
 										</li>
 										<li class="pro_titles_li pro_name_li">
-											株式会社KDDI 総合研究所 健康⾏動変容グループ<br>
-											招聘研究員
-										</li>
-										<li class="pro_titles_li pro_name_li">
-											⽇本臨床⼼理⼠資格認定協会 臨床⼼理⼠
-										</li>
-										<li class="pro_titles_li pro_name_li">
-											厚⽣労働省・⽂部科学省 公認⼼理師
+											Invited Researcher, KDDI Research, Inc.<br>
 										</li>
 									</ol>
 								</div>
@@ -124,82 +127,46 @@
 						</li>
 						<li>
 							<div class="h3_title">
+								<h3 class="modi_f_pro h3_top">Lisences</span></h3>
+							</div>
+							<div class="p_titles">
+								<ol class="p_titles_ol">
+									<li class="pro_titles_li pro_name_li">
+										Clinical Psychologist, Foundation of the Japanese Certification Board for Clinical Psychologists. (Japan)
+									</li>
+									<li class="pro_titles_li pro_name_li">
+										Certified Public Psychologist, Ministry of Health, Labour, and Welfare / Ministry of Education, Culture, Sports, Science and Technology. (Japan)
+									</li>
+								</ol>
+							</div>
+						</li>
+						<li>
+							<div class="h3_title">
+								<h3 class="modi_f_pu">Education</h3>
+							</div>
+							<div class="p_titles">
+								<ol class="p_titles_ol">
+									<li class="pro_titles_li">
+										2006.09-2010.05. Bachelor of Art in Psychology, Trinity Western University, Langley, BC, Canada. Minor in Business Administration.
+									</li>
+									<li class="pro_titles_li">
+										2012.04.-2015.08. Master of Science in Clinical Psychology, California State University, Fullerton, CA, USA. 
+									</li>
+									<li class="pro_titles_li">
+										2016.04.-2019/03. Doctor of Philosophy in Education (Clinical Psychology)}, University of Tokyo, Bunkyo, Tokyo, Japan.
+									</li>
+								</ol>
+							</div>
+							<div class="h3_title">
 								<h3 class="modi_f_pu">Curriculum Vitae</h3>
 							</div>
 							<div class="p_titles">
 								<ol class="p_titles_ol">
 									<li class="pro_titles_li">
-										<a href=https://toshitaka-hamamura.github.io/cv_jp/cv_jp.pdf>日本語</a>
-									</li>
-									<li class="pro_titles_li">
                     <a href=https://toshitaka-hamamura.github.io/cv_en/cv_en.pdf>English</a>
 									</li>
-								</ol>
-							</div>
-							<div class="h3_title">
-								<h3 class="modi_f_pu">職歴</h3>
-							</div>
-							<div class="p_titles">
-								<ol class="p_titles_ol">
 									<li class="pro_titles_li">
-										2010年09⽉〜2012年06⽉ 発達障害団体（Developmental Disabilities Association）
-									</li>
-									<li class="pro_titles_li">
-										2017年04⽉〜2019年03⽉ ⽇本学術振興会特別研究員（DC2）（受⼊機関／東京⼤学）
-									</li>
-									<li class="pro_titles_li">
-										2019年04⽉〜2020年03⽉ 株式会社KDDI 総合研究所 研究員
-									</li>
-									<li class="pro_titles_li">
-										2020年04⽉〜現在 ⽇本学術振興会特別研究員（PD）（受⼊機関／国⽴精神・神経医療研究センター）
-									</li>
-									<li class="pro_titles_li">
-										2019年04⽉〜現在 株式会社KDDI 総合研究所 招聘研究員
-									</li>
-								</ol>
-							</div>
-						</li>
-						<li>
-							<div class="h3_title">
-								<h3 class="modi_f_pu">学歴</h3>
-							</div>
-							<div class="p_titles">
-								<ol class="p_titles_ol">
-									<li class="pro_titles_li">
-										2003年09⽉〜2006年06⽉ デイビッド・トンプソン⾼等学校
-									</li>
-									<li class="pro_titles_li">
-										2006年09⽉〜2010年05⽉ トリニティ・ウエスタン⼤学⼈⽂社会科学部⼼理学専修
-									</li>
-									<li class="pro_titles_li">
-										2012年04⽉〜2015年08⽉ カリフォルニア州⽴⼤学フラートン校 ⼤学院⼈⽂社会科学研究科<br>⼼理学専攻 臨床⼼理学コース 修⼠課程
-									</li>
-									<li class="pro_titles_li">
-										2016年04⽉〜2019年03⽉ 東京⼤学 ⼤学院教育学研究科 総合教育科学専攻 ⼼⾝発達科学専修<br>臨床⼼理学コース 博⼠課程
-									</li>
-								</ol>
-							</div>
-						</li>
-						<li>
-							<div class="h3_title">
-								<h3 class="modi_f_pu">査読歴など</h3>
-							</div>
-							<div class="p_titles">
-								<ol class="p_titles_ol">
-									<li class="pro_titles_li">
-										International Journal of Mental Health and Addiction
-									</li>
-								</ol>
-							</div>
-						</li>
-						<li>
-							<div class="h3_title">
-								<h3 class="modi_f_pu">賞罰</h3>
-							</div>
-							<div class="p_titles">
-								<ol class="p_titles_ol">
-									<li class="pro_titles_li">
-										2017年9⽉ ⽇本アルコール関連問題学会第6 回⼩杉好弘記念賞
+										<a href=https://toshitaka-hamamura.github.io/cv_jp/cv_jp.pdf>Japanese</a>
 									</li>
 								</ol>
 							</div>
@@ -283,3 +250,4 @@
 	</footer>
 </body>
 </html>
+  
