--- a/index_en.html
+++ b/index_en.html
@@ -44,21 +44,22 @@
 			<div class="title">
 				<h1>Toshitaka Hamamura, Ph.D.</h1>
 			</div>
+<!-- 
 			<div class="lang">
 				<p>
 					<a href="profile.html">English</a>
 					<span>｜</span>
 					<a href="profile_jp.html">日本語</a>
 				</p>
+-->
 			</div>
 		</div>
 		<nav class="h_nav">
 			<ul class="h_ul">
-				<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
-				<li><a href=profile.html>PROFILE</a></li>
-				<li><a href=research.html>RESEARCH</a></li>
-				<li><a href=publication.html>LINKS</a></li>
-				<li><a href=”#”>CONACTS</a></li>
+				<li><a href=index.html>&nbsp;PROFILE&nbsp;</a></li>
+				<li><a href=index_jp.html>プロフィール</a></li>
+				<li><a href=research.html>研究</a></li>
+				<li><a href=404.html>LINKS</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
@@ -69,11 +70,11 @@
 			</div>
 			<nav class="globalMenuSp">
 				<ul>
-					<li><a href=index.html>&nbsp;HOME&nbsp;</a></li>
-					<li><a href=profile.html>PROFILE</a></li>
-					<li><a href=research.html>RESEARCH</a></li>
+					<li><a href=index.html>&nbsp;PROFILE&nbsp;</a></li>
+					<li><a href=inde_jp.html>プロフィール</a></li>
+					<li><a href=research.html>研究</a></li>
 					<li><a href=publication.html>LINKS</a></li>
-					<li><a href=”#”>CONACTS</a></li>
+					<li><a href=”log.html”>CONACTS</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -250,3 +251,4 @@
 	</footer>
 </body>
 </html>
+  
