--- a/404.html
+++ b/404.html
@@ -44,21 +44,21 @@
 			<div class="title">
 				<h1>Toshitaka Hamamura, Ph.D.</h1>
 			</div>
+<!-- 
 			<div class="lang">
 				<p>
-					<a href="#">English</a>
+					<a href="profile.html">English</a>
 					<span>｜</span>
-					<a href="#">日本語</a>
+					<a href="profile_jp.html">日本語</a>
 				</p>
-			</div>
+-->
 		</div>
 		<nav class="h_nav">
 			<ul class="h_ul">
-				<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
-				<li><a href=profile.html>プロフィール</a></li>
-				<li><a href=research.html>研究テーマ</a></li>
-				<li><a href=publication.html>業績</a></li>
-				<li><a href=”#”>連絡先</a></li>
+				<li><a href=index.html>&nbsp;PROFILE&nbsp;</a></li>
+				<li><a href=index_jp.html>プロフィール</a></li>
+				<li><a href=research.html>研究</a></li>
+				<li><a href=404.html>LINKS</a></li>
 			</ul>
 		</nav>
 		<div class="h_nav_sp">
