--- a/link.html
+++ b/link.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ja">
-
-<head>
-
-	<!-- Basic Page Needs
-    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-	<meta charset="utf-8">
-	<title>Toshitaka Hamamura's Site</title>
+  <html lang="ja">
+    
+    <head>
+    
+    <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta charset="utf-8">
+      <title>Toshitaka Hamamura's Site</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -61,6 +61,22 @@
 				<li><a href=404.html>LINKS</a></li>
 			</ul>
 		</nav>
+		<div class="h_nav_sp">
+			<div class="hamburger">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+			<nav class="globalMenuSp">
+				<ul>
+					<li><a href=index.html>&nbsp;ホーム&nbsp;</a></li>
+					<li><a href=profile.html>プロフィール</a></li>
+					<li><a href=research.html>研究内容</a></li>
+					<li><a href=publication.html>業績など</a></li>
+					<li><a href=”#”>連絡先</a></li>
+				</ul>
+			</nav>
+		</div>
 		<div class="h_img animation">
 			<img src="./images/research_v01.png" alt="ヘッダー画像">
 			<div class="section_t page_title">
